--- a/capitulo1/definicion_isw.tex
+++ b/capitulo1/definicion_isw.tex
@@ -1,6 +1,6 @@
 \begin{figure}[h!]
 \centering
-\includegraphics{{capitulo1/definicion_is.png}}
+\includegraphics[angle=0,width=80mm]{{capitulo1/definicion_is.png}}
 \caption{Definici\'on de Ingenier\'ia de Software}
 \label{figuragoogle}
 \end{figure}
