--- a/capitulo1/definicion_isw.tex
+++ b/capitulo1/definicion_isw.tex
@@ -2,5 +2,5 @@
 \centering
 \includegraphics[angle=0,width=80mm]{{capitulo1/definicion_is.png}}
 \caption{Definici\'on de Ingenier\'ia de Software}
-\label{figuragoogle}
+\label{definicionIS}
 \end{figure}
